updateCustomerProfile endpoitn created
